--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -3,37 +3,37 @@
 
   <div class="row placeholders">
     <div class="col-xs-6 col-sm-3 placeholder">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-      <h4>Label</h4>
-      <span class="text-muted">Something else</span>
+      <img src="https://thumbs.dreamstime.com/z/agricultural-concept-soybean-dollar-money-heap-soy-beans-banknote-56125238.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+      <h4>Soybean Prices--API</h4>
+      <span class="text-muted">##Something to do with a Date##</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-      <h4>Label</h4>
-      <span class="text-muted">Something else</span>
+      <img src="https://thumb1.shutterstock.com/display_pic_with_logo/3141683/507987913/stock-photo-corn-kernels-forming-dollar-symbol-corn-market-corn-kernels-selective-focus-and-shallow-depth-of-507987913.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+      <h4>Corn Prices--API</h4>
+      <span class="text-muted">##Something to do with a Date##</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-      <h4>Label</h4>
-      <span class="text-muted">Something else</span>
+      <img src="https://thumbs.dreamstime.com/z/cow-cartoon-character-dollar-sign-d-rendered-illustration-caw-doller-69111027.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+      <h4>Live Cattle Prices--API</h4>
+      <span class="text-muted">##Something to do with a Date##</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-      <h4>Label</h4>
-      <span class="text-muted">Something else</span>
+      <img src="http://www.noaa.gov/sites/default/files/styles/crop_394x394/public/thumbnails/image/FocusArea__Weather-02.jpg?itok=fO6wu2A8" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+      <h4>Todays Forecast--API</h4>
+      <span class="text-muted">##Something to do with a Date##</span>
     </div>
   </div>
 
-  <h2 class="sub-header">Section title</h2>
+  <h2 class="sub-header">Recently Updated Cows</h2>
   <div class="table-responsive">
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>#</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
+          <th>Cow Number</th>
+          <th>Description</th>
+          <th>Weight</th>
+          <th>Lot Number</th>
+          <th>% Gain From arrival</th>
         </tr>
       </thead>
       <tbody>
@@ -57,97 +57,6 @@
           <td>nec</td>
           <td>odio</td>
           <td>Praesent</td>
-        </tr>
-        <tr>
-          <td>1,003</td>
-          <td>libero</td>
-          <td>Sed</td>
-          <td>cursus</td>
-          <td>ante</td>
-        </tr>
-        <tr>
-          <td>1,004</td>
-          <td>dapibus</td>
-          <td>diam</td>
-          <td>Sed</td>
-          <td>nisi</td>
-        </tr>
-        <tr>
-          <td>1,005</td>
-          <td>Nulla</td>
-          <td>quis</td>
-          <td>sem</td>
-          <td>at</td>
-        </tr>
-        <tr>
-          <td>1,006</td>
-          <td>nibh</td>
-          <td>elementum</td>
-          <td>imperdiet</td>
-          <td>Duis</td>
-        </tr>
-        <tr>
-          <td>1,007</td>
-          <td>sagittis</td>
-          <td>ipsum</td>
-          <td>Praesent</td>
-          <td>mauris</td>
-        </tr>
-        <tr>
-          <td>1,008</td>
-          <td>Fusce</td>
-          <td>nec</td>
-          <td>tellus</td>
-          <td>sed</td>
-        </tr>
-        <tr>
-          <td>1,009</td>
-          <td>augue</td>
-          <td>semper</td>
-          <td>porta</td>
-          <td>Mauris</td>
-        </tr>
-        <tr>
-          <td>1,010</td>
-          <td>massa</td>
-          <td>Vestibulum</td>
-          <td>lacinia</td>
-          <td>arcu</td>
-        </tr>
-        <tr>
-          <td>1,011</td>
-          <td>eget</td>
-          <td>nulla</td>
-          <td>Class</td>
-          <td>aptent</td>
-        </tr>
-        <tr>
-          <td>1,012</td>
-          <td>taciti</td>
-          <td>sociosqu</td>
-          <td>ad</td>
-          <td>litora</td>
-        </tr>
-        <tr>
-          <td>1,013</td>
-          <td>torquent</td>
-          <td>per</td>
-          <td>conubia</td>
-          <td>nostra</td>
-        </tr>
-        <tr>
-          <td>1,014</td>
-          <td>per</td>
-          <td>inceptos</td>
-          <td>himenaeos</td>
-          <td>Curabitur</td>
-        </tr>
-        <tr>
-          <td>1,015</td>
-          <td>sodales</td>
-          <td>ligula</td>
-          <td>in</td>
-          <td>libero</td>
         </tr>
       </tbody>
     </table>
