--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,15 +6,10 @@
     <li><a href="#">Export</a></li>
   </ul>
   <ul class="nav nav-sidebar">
-    <li><a href="">Nav item</a></li>
-    <li><a href="">Nav item again</a></li>
-    <li><a href="">One more nav</a></li>
-    <li><a href="">Another nav item</a></li>
-    <li><a href="">More navigation</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="">Nav item again</a></li>
-    <li><a href="">One more nav</a></li>
-    <li><a href="">Another nav item</a></li>
+    <li><a href="">Feeder Cows</a></li>
+    <li><a href="">Calving Cows</a></li>
+    <li><a href="">2016 Calves</a></li>
+    <li><a href="">2017 Calves</a></li>
+    <li><a href="">Historic Data</a></li>
   </ul>
 </div>
