created admin/user log in and log out

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,8 +12,14 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">##Login##</a></li>
+        <li><a href="<%= root_path %>">Home</a></li>
+        <% if current_user %>
+          <li><%= "Welcome #{current_user.name}" %></li>
+          <li><%= link_to "Logout", logout_path %></li>
+          <% else %>
+            <li><%= link_to "Signup", signup_path %></li>
+            <li><%= link_to "Login", login_path %></li>
+          <% end %>
       </ul>
     </div>
   </div>
