--- a/app/views/admin/calving_cows/_forms.html.erb
+++ b/app/views/admin/calving_cows/_forms.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(controller: "admin/feeder_cows", action: :create) do %>
+<%= form_tag(controller: "admin/calving_cows", action: :create) do %>
 
   <%= label_tag "Tag Number" %>
   <%= number_field_tag :tag_number %><br />
