--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,15 +1,15 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
     <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-    <li><a href="#">Reports</a></li>
-    <li><a href="#">Analytics</a></li>
-    <li><a href="#">Export</a></li>
+    <li><a href="#">Reports-<small>Coming Soon</small></a></li>
+    <li><a href="#">Analytics-<small>Coming Soon</small></a></li>
+    <li><a href="#">Export-<small>Coming Soon</small></a></li>
   </ul>
   <ul class="nav nav-sidebar">
-    <li><a href="">Feeder Cows</a></li>
-    <li><a href="">Calving Cows</a></li>
-    <li><a href="">2016 Calves</a></li>
-    <li><a href="">2017 Calves</a></li>
-    <li><a href="">Historic Data</a></li>
+    <li><a href="<%= feeder_cows_path %>">Feeder Cows</a></li>
+    <li><a href="<%= calving_cows_path %>">Calving Cows</a></li>
+    <li><a href="/calves/year/2016">2016 Calves</a></li>
+    <li><a href="/calves/year/2017">2017 Calves</a></li>
+    <li><a href="#">Historic Data-<small>Coming Soon</small></a></li>
   </ul>
 </div>
