--- a/app/views/admin/calves/_form.html.erb
+++ b/app/views/admin/calves/_form.html.erb
@@ -6,6 +6,9 @@
   <%= f.label :description %>
   <%= f.text_field :description %>
 
-  <%= f.submit %>
+  <%= f.label :date_born %>
+  <%= f.date_field :date_born %>
   
+  <%= f.submit %>
+
 <% end %>
