--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,12 +7,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">#Ranch Brand Image#</a>
+      <a href="/"><img class="navbar-brand" src="https://wd40.com/img/logo_wd40.gif" alt=""></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="<%= root_path %>">Home</a></li>
         <% if current_user %>
           <li><%= "Welcome #{current_user.name}" %></li>
           <li><%= link_to "Logout", logout_path %></li>
