fixed the view of feeder cows index

--- a/app/views/feeder_cows/index.html.erb
+++ b/app/views/feeder_cows/index.html.erb
@@ -1,12 +1,13 @@
 <h1>Feeder Cows</h1>
 
 <% @feeder_cows.each do |feeder| %>
-<% if current_admin %>
-<small><%= link_to "Delete", admin_feeder_cow_path(feeder), method: :delete %></small>
-<small><%= link_to "Edit", edit_admin_feeder_cow_path(feeder) %></small>
-<% end %>
   <%= feeder.tag_number %>
-  <%= link_to feeder.residence.name, admin_residence_path(feeder.residence) %><br />
+  Weight -- <%= feeder.feeder_weights.first.weight %>
+  Lot -- <%= link_to feeder.residence.name, admin_residence_path(feeder.residence) %>
+  <% if current_admin %>
+    <small><%= link_to "Delete", admin_feeder_cow_path(feeder), method: :delete %></small>
+    <small><%= link_to "Edit", edit_admin_feeder_cow_path(feeder) %></small>
+  <% end %><br />
 <% end %>
 
 <% if current_admin %>
