--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -23,63 +23,25 @@
   </div>
 </div>
 
-<h2 class="sub-header">Recently Updated Cows</h2>
+<h2 class="sub-header">Highest Weights</h2>
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
       <tr>
         <th>Cow Number</th>
         <th>Description</th>
-        <th>Weight</th>
+        <th>Recent Weight</th>
         <th>Lot Number</th>
         <th>% Gain From arrival</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>1,001</td>
-        <td>Lorem</td>
-        <td>ipsum</td>
-        <td>dolor</td>
-        <td>sit</td>
-      </tr>
       <tr>
         <td>1,002</td>
         <td>amet</td>
         <td>consectetur</td>
         <td>adipiscing</td>
         <td>elit</td>
-      </tr>
-      <tr>
-        <td>1,003</td>
-        <td>Integer</td>
-        <td>nec</td>
-        <td>odio</td>
-        <td>Praesent</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<h2 class="sub-header">Highest Weight Gains</h2>
-<div class="table-responsive">
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Cow Number</th>
-        <th>Description</th>
-        <th>Weight</th>
-        <th>Lot Number</th>
-        <th>% Gain From arrival</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= FeederCow.order(:updated_at).last %></td>
-        <td>Black White Face</td>
-        <td><%= FeederCow.first.feeder_weights.last %></td>
-        <td><%= FeederCow.first.residence.name %></td>
-        <td><%= FeederCow.weight_gain %></td>
       </tr>
       <tr>
         <td>1,002</td>
